syntax = "proto3";

package aruco;

message ArucoPosition {
    int32 id = 1;
    float x = 2;
    float y = 3;
    float rot = 4;
    float size = 5;
}