syntax = "proto3";

package projector;

service ProjectorService {
    rpc GetDrawableSize (GetDrawableSizeRequest) returns (SizeResponse);
    rpc Draw (DrawRequest) returns (DrawResponse);
    rpc DrawArucos (DrawArucosRequest) returns (DrawResponse);
    rpc DrawTexts (DrawTextsRequest) returns (DrawResponse);
    rpc DrawLines (DrawLinesRequest) returns (DrawResponse);
    // rpc DrawTriangles (DrawTrianglesRequest) returns (DrawResponse);
    rpc DrawRectangles (DrawRectanglesRequest) returns (DrawResponse);
    rpc DrawCircles (DrawCirclesRequest) returns (DrawResponse);
}

message GetDrawableSizeRequest {
    
}

message SizeResponse {
    double width = 1;
    double height = 2;
}

message DrawRequest {
    
}

message DrawArucosRequest {
    repeated Aruco markers = 1;
}

message Aruco {
    float x = 1;
    float y = 2;
    float size = 3;
}

message DrawTextsRequest {
    repeated Text texts = 1;
}

message Text {
    string text = 1;
    float x = 2;
    float y = 3;
    float size = 4;
}

message DrawLinesRequest {
    repeated Line lines = 1;
}

message Line {
    float x1 = 1;
    float y1 = 2;
    float x2 = 3;
    float y2 = 4;
    float width = 5;
}

message DrawRectanglesRequest {
    repeated Rectangle rectangles = 1;
}

message Rectangle {
    float x = 1;
    float y = 2;
    float width = 3;
    float height = 4;
    float line_width = 5;
    bool fill = 6;
}

message DrawCirclesRequest {
    repeated Circle circles = 1;
}

message Circle {
    float x = 1;
    float y = 2;
    float radius = 3;
    bool fill = 4;
}

message DrawResponse {
    bool success = 1;
}

